# -*- coding: utf-8 -*-

2010-02-09  Eric Hodel  <drbrain@segment7.net>

	* bin/update_rubygems:  Use system, exec more correctly, remove
	  useless puts.
	* lib/rubygems/commands/query_command.rb:  List every version when
	  --prerelease --all is given.

2010-02-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/dependency_command.rb:  Support --prerelease.
	* lib/rubygems/commands/fetch_command.rb:  Support --prerelease.
	* lib/rubygems/format.rb:  Don't crash on empty files.  Bug #27292 by
	  Ian Ragsdale.
	* lib/rubygems/server.rb:  Fix markup.  Bug #27045 by Eric Young.
	* History.txt:  RubyGems 1.3.6 release notes.

2010-02-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Allow prerelease gems to
	  depend on non-prerelease gems.

2010-02-06  Eric Hodel  <drbrain@segment7.net>

	* test/test_gem_commands_specification_command.rb:  Don't enforce YAML
	  format.  Patch #27791 by Aaron Patterson.
	* lib/rubygems/version.rb:  Allow captial letters in prerelease
	  versions.
	* lib/rubygems/config_file.rb:  Explain format of ~/.gemrc.  Bug
	  #27698 by J Smith.
	* lib/rubygems/gem_path_searcher.rb:  Handle nil require_paths.
	  Patch #27334 by Roger Pack.
	* lib/rubygems/server.rb:  Handle --bind option.  Patch #27357 by
	  Bruno Michel.
	* lib/rubygems/doc_manager:  gem rdoc --overwrite to preserve built
	  rdoc.  Patch #25982 by Akinori MUSHA.
	* lib/rubygems/commands/which_command.rb:  Fail if no paths were
	  found.  Adapted patch #27681 by Caio Chassot.
	* lib/rubygems/remote_fetcher.rb:  Don't copy if the file is where we
	  want it.  Patch #27409 by Jakub Šťastný.

2010-02-01  John Barnette  <jbarnette@rubygems.org>

	* lib/rubygems/command*: Add 'gem push' and 'gem owner' for
	  interacting with modern/Gemcutter sources [Nick Quaranto]

2010-01-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_list.rb:  Ignore development dependencies
	  unless explicitly needed.  Bug #27608 by Roger Pack.
